# data-visualization

./: homeprices.csv  pyproject.toml  viz-a.ipynb  viz-b.ipynb
