[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["talahajeer <tala.hajeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
